remove run command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,10 +108,13 @@ jobs:
         run: |
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
           echo 'DISPLAY=:99.0' >>$GITHUB_ENV
+
+      - name: Go to packages/next-template
+        if: runner.os == 'Linux'
+        run: cd packages/nextjs-template
       
       - name: Download notes.zip
         if: runner.os == 'Linux'
-        run: cd packages/nextjs-template
         uses: wei/curl@master
         with:
           args: -LO https://artifacts-prod-artifactb7980f61-19orqnnuurvwy.s3.us-west-2.amazonaws.com/artifacts/dendron-site.zip
@@ -122,9 +125,12 @@ jobs:
           unzip dendron-site.zip
           pwd
 
-      - name: Run cypress 
+      - name: Go back to root folder
         if: runner.os == 'Linux'
         run: cd ../../
+
+      - name: Run cypress
+        if: runner.os == 'Linux'
         uses: cypress-io/github-action@v2
         with:
           build: "yarn run template:export"
