--- a/package.json
+++ b/package.json
@@ -90,6 +90,9 @@
     "ci:init": "yarn bootstrap:bootstrap && yarn bootstrap:build",
     "ci:test:cli": "npx lerna run test --ignore @dendronhq/plugin-core --parallel --stream -- -- --forceExit",
     "ci:test:plugin": "npx lerna run test --scope @dendronhq/plugin-core --stream",
+    "template:build": "yarn --cwd packages/nextjs-template run build",
+    "template:export": "yarn --cwd packages/nextjs-template run export",
+    "template:start": "yarn --cwd packages/nextjs-template run start",
     "watch": "npx lerna exec --scope $pkg -- tsc -p tsconfig.build.json --watch",
     "hooks:pre-commit": "node ./hooks/pre-commit.js",
     "hooks:pre-push": "node ./hooks/pre-push.js",
