--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -75,19 +75,24 @@ jobs:
           DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget nightly
 
-      - name: Start Verdaccio Again
-        run: |
-          verdaccio > verdaccio.log 2>&1 &
+      # - name: Start Verdaccio Again
+      #   run: |
+      #     verdaccio > verdaccio.log 2>&1 &
 
-      - name: Wait for Verdaccio Cache to Update
-        run: |
-          sleep 60
+      # - name: Wait for Verdaccio Cache to Update
+      #   run: |
+      #     sleep 60
 
       - name: Publish to VS Code Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
         working-directory: ./packages/plugin-core
-        run: yarn deploy:vscode
+        run:
+          yarn config get registry
+          npm get registry
+          verdaccio > verdaccio.log 2>&1 &
+          sleep 30
+          yarn deploy:vscode
 
       - name: Publish to Open VSX Marketplace
         env:
