spike: npx verdaccio

--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -90,7 +90,7 @@ jobs:
         run: |
           yarn config get registry
           npm get registry
-          verdaccio > verdaccio.log
+          npx verdaccio > verdaccio.log
           sleep 30
           cat verdaccio.log
           yarn config set registry http://localhost:4873
