--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     environment: plugin-production
 
-    timeout-minutes: 30
+    timeout-minutes: 60
 
     runs-on: ubuntu-latest
 
@@ -92,9 +92,12 @@ jobs:
           npm get registry
           npx verdaccio > verdaccio.log
           sleep 30
+          echo "checking log"
           cat verdaccio.log
+          echo "setting registry to local"
           yarn config set registry http://localhost:4873
           npm set registry http://localhost:4873/
+          echo "running deploy:vscode"
           yarn deploy:vscode
 
       - name: Publish to Open VSX Marketplace
