support generating index.html dynamically

--- a/packages/dendron-plugin-views/package.json
+++ b/packages/dendron-plugin-views/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.12.3",
     "@dendronhq/common-all": "^0.67.2",
     "@dendronhq/common-frontend": "^0.67.2",
+    "@dendronhq/common-server": "^0.67.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
