--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -75,13 +75,15 @@ jobs:
           DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget nightly
 
+      # yarn deploy:vscode (vsce publish) attempts to pull dependencies, so
+      # verdaccio must be running
       - name: Publish to VS Code Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
         working-directory: ./packages/plugin-core
         run: |
           npx verdaccio > verdaccio.log  2>&1 &
-          sleep 30
+          sleep 15
           echo "checking verdaccio log"
           cat verdaccio.log
           echo "Setting registry to local"
@@ -94,4 +96,9 @@ jobs:
         env:
           OVSX_PAT: ${{ secrets.VSCODIUM_PUBLISH_PWD }}
         working-directory: ./packages/plugin-core
-        run: yarn deploy:ovsx
+        run: |
+          echo "Setting registry to local"
+          yarn config set registry http://localhost:4873
+          npm set registry http://localhost:4873/
+          echo "running deploy:ovsx"
+          yarn deploy:ovsx
