--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -4,7 +4,7 @@
   "displayName": "dendron",
   "description": "Dendron is a hierarchal note taking tool that grows as you do. ",
   "publisher": "dendron",
-  "version": "0.67.2",
+  "version": "0.67.3-alpha.3",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -840,17 +840,21 @@
     "webpack:prod": "webpack --config webpack.prod.js",
     "watch": "yarn compile --watch",
     "build": "yarn compile",
+    "build:dev": "yarn webpack",
     "build:prod": "yarn webpack:prod && ./scripts/varSub.sh",
     "compile": "tsc -p tsconfig.build.json",
     "test": "node ./out/src/test/runTestInteg.js",
     "format": "echo nop",
     "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js",
     "deploy:vscode": "vsce publish --yarn",
-    "deploy:ovsx": "ovsx publish --yarn"
+    "deploy:ovsx": "ovsx publish --yarn",
+    "clean": "yarn rimraf out dist && yarn clean:assets",
+    "clean:assets": "yarn rimraf assets/{static}",
+    "rimraf": "npx rimraf"
   },
   "devDependencies": {
-    "@dendronhq/common-test-utils": "^0.67.2",
-    "@dendronhq/engine-test-utils": "^0.67.2",
+    "@dendronhq/common-test-utils": "^0.67.3-alpha.3",
+    "@dendronhq/engine-test-utils": "^0.67.3-alpha.3",
     "@sentry/webpack-plugin": "^1.17.1",
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
@@ -870,6 +874,7 @@
     "mocha": "^7.1.2",
     "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
+    "rimraf": "^3.0.2",
     "source-map-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^8.0.0",
@@ -882,12 +887,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.67.2",
-    "@dendronhq/common-all": "^0.67.2",
-    "@dendronhq/common-server": "^0.67.2",
-    "@dendronhq/dendron-cli": "^0.67.2",
-    "@dendronhq/engine-server": "^0.67.2",
-    "@dendronhq/pods-core": "^0.67.2",
+    "@dendronhq/api-server": "^0.67.3-alpha.3",
+    "@dendronhq/common-all": "^0.67.3-alpha.3",
+    "@dendronhq/common-server": "^0.67.3-alpha.3",
+    "@dendronhq/dendron-cli": "^0.67.3-alpha.3",
+    "@dendronhq/engine-server": "^0.67.3-alpha.3",
+    "@dendronhq/pods-core": "^0.67.3-alpha.3",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "@types/vscode": "1.58",
