--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.67.2",
+  "version": "0.67.3-alpha.3",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -57,9 +57,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.67.2",
-    "@dendronhq/common-server": "^0.67.2",
-    "@dendronhq/engine-server": "^0.67.2",
+    "@dendronhq/common-all": "^0.67.3-alpha.3",
+    "@dendronhq/common-server": "^0.67.3-alpha.3",
+    "@dendronhq/engine-server": "^0.67.3-alpha.3",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "cors": "^2.8.5",
