--- a/packages/dendron-11ty/package.json
+++ b/packages/dendron-11ty/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-11ty-legacy",
-  "version": "0.67.2",
+  "version": "0.67.3-alpha.3",
   "main": "index.js",
   "license": "AGPLv3",
   "files": [
@@ -29,10 +29,10 @@
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "@dendronhq/common-all": "^0.67.2",
-    "@dendronhq/common-server": "^0.67.2",
+    "@dendronhq/common-all": "^0.67.3-alpha.3",
+    "@dendronhq/common-server": "^0.67.3-alpha.3",
     "@dendronhq/eleventy-plugin-seo": "^0.6.0",
-    "@dendronhq/engine-server": "^0.67.2",
+    "@dendronhq/engine-server": "^0.67.3-alpha.3",
     "@fec/eleventy-plugin-remark": "^2.1.0",
     "eleventy-xml-plugin": "^0.1.0",
     "fs-extra": "^9.0.1",
