--- a/packages/dendron-plugin-views/.gitignore
+++ b/packages/dendron-plugin-views/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+public/static
+public/*.css
+public/index.html
+# migrated from scripts/buildStyles.js
+src/styles/scss/
