--- a/packages/dendron-next-server/package.json
+++ b/packages/dendron-next-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dendronhq/dendron-next-server",
   "private": true,
-  "version": "0.67.3-alpha.3",
+  "version": "0.68.0",
   "license": "GPLv3",
   "repository": {
     "type": "git",
@@ -36,9 +36,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@chakra-ui/react": "^1.0.0",
-    "@dendronhq/common-all": "^0.67.3-alpha.3",
-    "@dendronhq/common-frontend": "^0.67.3-alpha.3",
-    "@dendronhq/engine-server": "^0.67.3-alpha.3",
+    "@dendronhq/common-all": "^0.68.0",
+    "@dendronhq/common-frontend": "^0.68.0",
+    "@dendronhq/engine-server": "^0.68.0",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "@next/bundle-analyzer": "^11.1.2",
