--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -53,6 +53,7 @@
     "ajv": "^8.6.0",
     "ajv-errors": "^3.0.0",
     "analytics-node": "^5.1.0",
+    "anymatch": "^3.1.2",
     "comment-json": "^4.1.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.1",
