feat: Native workspace enhancements (#1670)
* feat: automatically initialize if `dendron.yml` is added to WS

* spike: test FileAddWatcher, analytics, config option to disable auto-initialization

* spike: seeds handling of workspaces where `dendron.yml` is not at root

* chore: Native workspace initialization tests

* spike: type fix

* spike: testing fixes

* spike: rename & update docstrings for clarity

* fix: warning message on non-Dendron workspaces

* spike: analytics for workspace type being initialized

* skip test failing in Windows CI

* feat: prompt user to pick one if there are multiple roots

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -723,6 +723,11 @@
         "dendron.serverPort": {
           "type": "number",
           "description": "port for server. If not set, will be randomly generated at startup."
+        },
+        "dendron.watchForNativeWorkspace": {
+          "type": "boolean",
+          "default": true,
+          "description": "When enabled, Dendron will watch non-Dendron workspaces to detect when one is created, and will automatically initialize itself. Otherwise, you may need to reload VSCode after creating a native workspace."
         }
       }
     },
