fix: have schema exact match suggestion in lookup show up at the top of the list

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -882,6 +882,7 @@
     "@types/open": "^6.2.1",
     "@types/open-graph-scraper": "^4.7.0",
     "@types/semver": "^7.3.1",
+    "@types/string-similarity": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "glob": "^7.1.6",
@@ -916,6 +917,7 @@
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.15",
     "luxon": "^1.25.0",
+    "string-similarity": "^4.0.4",
     "markdown-it": "^11.0.0",
     "open": "^8.2.1",
     "open-graph-scraper": "^4.7.1",
