enhance: add syntax highlighting

--- a/.gitignore
+++ b/.gitignore
@@ -5,22 +5,14 @@ node_modules
 /build
 lerna-debug.log
 local
-common-client-v_boilerplate2cra
-common-client-v2
 vendor
 dendron.code-workspace
 .jekyll-cache
 _site
 shell.code-snippets
 packages/pods-core/lib/index.d.ts
-packages/dendron-cli/stdout.old
-packages/dendron-cli/stdout.old
-packages/dendron-cli/stdout.old
-packages/plugin-core/.DS_Store
+**/stdout.old
 .DS_Store
-packages/dendron-cli/stdout.old
-packages/api-server/stdout.old
-packages/api-server/src/static
 packages/common-server/src/proto.ts
 .dendron.*
 meta.json
@@ -32,12 +24,10 @@ workspaces
 tmp
 storage/.verdaccio-db.json
 *.js.map
-packages/plugin-core/dendron.server.log
-dendron.server
+**/*.log
+**/*.log.old
 dendron.server.log.old
 test-workspace-*-profile
-Session.vim
-*.log
-*.log.old
 dendron-main.code-workspace
 pkgjson.code-search
+**/assets-dendron
