fix: updated url checker

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -874,6 +874,7 @@
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
     "@types/glob": "^7.1.1",
+    "@types/is-url": "^1.2.30",
     "@types/lodash": "^4.14.155",
     "@types/luxon": "^1.25.0",
     "@types/markdown-it": "^10.0.2",
@@ -915,6 +916,7 @@
     "cross-path-sort": "^1.0.0",
     "execa": "^4.0.2",
     "fs-extra": "^9.0.1",
+    "is-url": "^1.2.4",
     "lodash": "^4.17.15",
     "luxon": "^1.25.0",
     "string-similarity": "^4.0.4",
