--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -1,4 +1,4 @@
-version: 3
+version: 4
 useFMTitle: true
 useNoteTitleForLink: true
 mermaid: true
@@ -42,14 +42,13 @@ site:
 dev:
     enableWebUI: true
     enablePreviewV2: true
-    # nextServerUrl: 'http://localhost:3000'
-    # engineServerPort: 3005
 commands:
     lookup:
         note:
             selectionMode: extract
             confirmVaultOnCreate: true
             leaveTrace: false
+            bubbleUpCreateNew: true
     insertNote:
         initialValue: templates
     insertNoteLink:
@@ -59,7 +58,7 @@ commands:
         enableMarker: false
     randomNote: {}
 workspace:
-    dendronVersion: 0.64.1
+    dendronVersion: 0.69.1
     vaults:
         -
             fsPath: vault3
@@ -87,5 +86,33 @@ workspace:
     enableAutoFoldFrontmatter: true
     maxPreviewsCached: 10
     maxNoteLength: 204800
+    task:
+        name: ''
+        dateFormat: ''
+        addBehavior: childOfCurrent
+        statusSymbols:
+            '': ' '
+            wip: w
+            done: x
+            assigned: a
+            moved: m
+            blocked: b
+            delegated: l
+            dropped: d
+            pending: 'y'
+        prioritySymbols:
+            H: high
+            M: medium
+            L: low
+        todoIntegration: false
+        createTaskSelectionType: selection2link
+    enableUserTags: true
+    enableHashTags: true
 noLegacyNoteRef: true
 usePrettyRefs: true
+preview:
+    enableFMTitle: true
+    enableNoteTitleForLink: true
+    enableMermaid: true
+    enablePrettyRefs: true
+    enableKatex: true
