--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "workspaces": {
     "packages": [
       "packages/common-all",
+      "packages/common-assets",
       "packages/common-server",
       "packages/common-test-utils",
       "packages/engine-server",
@@ -62,7 +63,8 @@
     "build:minor:local:ci": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=local BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
     "build:minor:remote": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "build:minor:remote:ci": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=remote BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
-    "gen:data": "node packages/dendron-cli/lib/bin/dendron-cli.js dev generate_json_schema_from_config",
+    "gen:data": "yarn dendron dev generate_json_schema_from_config",
+    "dendron": "node packages/dendron-cli/lib/bin/dendron-cli.js",
     "cleanup": "./bootstrap/scripts/cleanup.sh",
     "release": "standard-version",
     "format": "lerna exec --parallel --ignore @dendronhq/dendron-11ty-legacy -- yarn format",
