--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -17,7 +17,9 @@
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
     "postbuild": "next-sitemap --config sitemap.js",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "clean": "yarn rimraf public data out",
+    "rimraf": "npx rimraf"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
