--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^2.0.4",
     "standard-version": "^8.0.0",
     "verdaccio": "^5.1.3",
+    "verdaccio-auth-memory": "^10.0.1",
     "vsce": "^1.96.1"
   },
   "scripts": {
