--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -332,6 +332,13 @@
         "docPreview": "<a href=\"https://www.loom.com/share/d49e5f4155af485cadc9cd810b6cab28\"> <img src=\"https://cdn.loom.com/sessions/thumbnails/d49e5f4155af485cadc9cd810b6cab28-with-play.gif\"> </a>"
       },
       {
+        "command": "dendron.exportPodv2",
+        "title": "Dendron: Export Pod V2",
+        "desc": "Experimental Feature",
+        "docLink": "dendron.topic.pod.md",
+        "docPreview": ""
+      },
+      {
         "command": "dendron.publishPod",
         "title": "Dendron: Publish Pod",
         "desc": "Publish your note to a different format/location",
