--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^2.0.4",
     "standard-version": "^8.0.0",
     "verdaccio": "^5.1.3",
+    "verdaccio-auth-memory": "^10.0.1",
     "vsce": "^1.96.1"
   },
   "scripts": {
@@ -125,6 +126,7 @@
     "cross-env": "^7.0.3",
     "execa": "^5.0.0",
     "github-slugger": "^1.3.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "verdaccio-memory": "^10.0.1"
   }
 }
