fix: allow assets to open from preview view

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -64,6 +64,8 @@ workspace:
             visibility: private
         -
             fsPath: vault
+        -
+            fsPath: assets
     journal:
         dailyDomain: daily
         name: journal
