--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -8,7 +8,8 @@ on: workflow_dispatch
 
 jobs:
   build:
-    environment: plugin-development timeout-minutes: 30
+    environment: plugin-development
+    timeout-minutes: 30
     runs-on: ubuntu-latest
 
     steps:
