enhance: add auto complete to note lookup

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -194,6 +194,12 @@
         "when": "dendron:pluginActive"
       },
       {
+        "command": "dendron.lookupNoteAutoComplete",
+        "title": "Dendron:: hidden",
+        "desc": "Auto complete note lookup",
+        "when": "dendron:pluginActive && dendron:noteLookupActive && !editorFocus && !view"
+      },
+      {
         "command": "dendron.lookupSchema",
         "title": "Dendron: Lookup Schema",
         "desc": "Initiate schema lookup",
@@ -770,6 +776,12 @@
         "mac": "cmd+L",
         "key": "ctrl+l",
         "when": "dendron:pluginActive"
+      },
+      {
+        "command": "dendron.lookupNoteAutoComplete",
+        "mac": "Tab",
+        "key": "Tab",
+        "when": "dendron:pluginActive && dendron:noteLookupActive && !editorFocus && !view"
       },
       {
         "command": "dendron.lookupNote",
